# aiagent-zhk

./: py5.csv  py5_config.json  py5_test.txt
aiagent-step1/: .editorconfig  .gitignore  README.md  learning-path.md  pyproject.toml  requirements.txt
aiagent-step1/code/01-hello-llm/: basic_experiment.py  llm_experiment_platform.py  test_newapi.py
aiagent-step1/code/python-basics/: README.md
aiagent-step1/code/python-basics/01-syntax/: exercises.py  lesson.py  practice_day1.py  python_vs_java.py
aiagent-step1/code/python-basics/02-features/: exercises.py  lesson.py  practice_day2.py
aiagent-step1/code/python-basics/03-oop/: exercises.py  oop.py  oop_exercises.py  practice_day3.py
aiagent-step1/code/python-basics/04-decorators/: decorator_exercises.py  decorators.py  exercises.py  lesson.py  practice_day4.py
aiagent-step1/code/python-basics/05-exceptions/: exceptions_and_files.py  exercises.py  lesson.py  practice_day5.py
aiagent-step1/code/python-basics/06-modules/: exercises.py  lesson.py  modules_and_packages.py
aiagent-step1/code/python-basics/07-async/: async_basics.py  async_exercises.py  async_programming.py  lesson.py  (+1 more)
aiagent-step1/notes/01-基础准备/: Python学习路径.md  学习笔记.md  第1周学习计划.md  练习文件清单.md  自问自答.md
aiagent-step1/resources/: learning-resources.md  setup-guide.md
aiagent-step1/tests/mini_agent/: test_agent.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_models.py  test_tools.py
aiagent-step1/tests/python_basics/: test_course_structure.py  test_documentation.py  test_lessons.py
aiagent-step1/当下要求/: agent-长鑫.md
(+35 files in other folders)
