[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagent-step1-foundations"
version = "0.1.0"
description = "Python foundations for Java developers learning AI Agent development"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0,<3.0",
  "pydantic[email]>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-asyncio>=0.24,<2.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.14,<2.0",
]
agent-frameworks = [
  "langchain>=0.3,<2.0",
  "langchain-openai>=0.3,<2.0",
  "langgraph>=0.2,<2.0",
]
data = [
  "pymilvus>=2.3,<3.0",
  "pgvector>=0.2,<1.0",
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<3.0",
]

[project.scripts]
mini-agent = "mini_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "code/python-basics/15-mini-agent"}

[tool.setuptools.packages.find]
where = ["code/python-basics/15-mini-agent"]
include = ["mini_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["code/python-basics/15-mini-agent"]
asyncio_mode = "auto"
addopts = ["-ra", "-m", "not integration"]
markers = ["integration: requires credentials and a real external API"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mini_agent"]
mypy_path = "code/python-basics/15-mini-agent"
